# wspeed

./: .replit  bot.py  database.py  fixed_bot.py  index.html  main.py  pet_calculator.py  pet_values.json  pyproject.toml  replit.md  tickets.json  web_server.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conten-1757711167178_1757711167179.txt
templates/: index.html
